# MaaFrameworkCommonApp

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/resource/pipeline/: example.json
cmake/: version.cmake
source/cli/: CMakeLists.txt  main.cpp
